--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "glass_pumpkin"
+name = "fixed_pumpkin"
 version = "1.3.0"
 description = "A cryptographically secure prime number generator based on rust's own num-bigint and num-integer"
 keywords = ["prime", "big", "cryptography", "generator", "number"]
@@ -13,9 +13,7 @@ edition = "2021"
 
 [dependencies]
 core2 = "0.4"
-num-bigint = { version = "0.4", features = ["rand"] }
-num-traits = "0.2"
-num-integer = "0.1"
+crypto-bigint = "0.4.8"
 rand = "0.8"
 lazy_static = "1.4"
 
